<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <properties>
        <asciidoctorj.version>2.5.4</asciidoctorj.version>
    </properties>

    <parent>
        <groupId>org.jqassistant.contrib.common</groupId>
        <artifactId>parent</artifactId>
        <version>1.12.0</version>
    </parent>

    <groupId>org.jqassistant.contrib.asciidoctorj</groupId>
    <artifactId>jqassistant-asciidoctorj-extensions</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <url>http://jqassistant.org/</url>
    <description>
        AsciidoctorJ extensions for jQAssistant.
    </description>

    <organization>
        <name>BUSCHMAIS GbR</name>
        <url>http://www.buschmais.com</url>
    </organization>

    <developers>
        <developer>
            <id>FrodeMeier</id>
            <name>Frode Meier</name>
            <email>frode.meier@buschmais.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/jqassistant-contrib/jqassistant-asciidoctorj-extensions.git</connection>
        <developerConnection>scm:git:https://github.com/jqassistant-contrib/jqassistant-asciidoctorj-extensions.git
        </developerConnection>
        <url>https://github.com/jqassistant-contrib/jqassistant-asciidoctorj-extensions</url>
    </scm>

    <dependencies>
        <dependency>
            <groupId>com.buschmais.jqassistant.core</groupId>
            <artifactId>shared</artifactId>
        </dependency>
        <dependency>
            <groupId>com.buschmais.jqassistant.core</groupId>
            <artifactId>rule</artifactId>
        </dependency>
        <dependency>
            <groupId>com.buschmais.jqassistant.core</groupId>
            <artifactId>schemata</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.asciidoctor</groupId>
            <artifactId>asciidoctorj-api</artifactId>
            <version>${asciidoctorj.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>2.4.0-b180830.0438</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.0.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.asciidoctor</groupId>
            <artifactId>asciidoctorj</artifactId>
            <version>${asciidoctorj.version}</version>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.32</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
                <version>2.2.2</version>
                <configuration>
                    <attributes>
                        <report-path>
                            src/test/resources/demo-report.xml
                        </report-path>
                        <templates-path>
                            custom
                        </templates-path>
                    </attributes>
                </configuration>
                <executions>
                    <execution>
                        <id>output-html</id>
                        <phase>package</phase>
                        <goals>
                            <goal>process-asciidoc</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.jqassistant.contrib.asciidoctorj</groupId>
                        <artifactId>jqassistant-asciidoctorj-extensions</artifactId>
                        <version>1.0.0-SNAPSHOT</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
